--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="responsive/responsive.css">
     <link href="https://fonts.cdnfonts.com/css/arquitecta" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -71,7 +72,7 @@
         <div class="island_24_img">
             <img src="img/island_24.png" alt="">
         </div>
-        <div class="island_24_para">
+        <div class="island_24_para"  data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             <p>A campaign very close to our hearts. Shot on the beautiful, tropical island of Bali, this collection
                 encapsulates the diversity of the island faces that inhabit it. </p>
         </div>
@@ -97,7 +98,7 @@
         <!-- Text Section -->
         <div class="text-section media">
             <img src="img/sbs_image_four.png" alt="">
-            <div>
+            <div data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <p>A place where people from different parts of the world, come together and create a new way of life –
                     slow, mindful living, nomadic work styles, morning coffee runs to daily swims and the stylish
                     cocktail hours.</p>
@@ -119,7 +120,7 @@
 
     <!-- section start -->
     <div class="image_grid_bg">
-        <div class="image_grid_text" style="padding-bottom: 50px;">
+        <div class="image_grid_text" style="padding-bottom: 50px;"  data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             <h1>FACES OF ISLAND</h1>
             <img src="img/foi_line_img.png" alt="" style="width: 40px;height: 4.78px;margin: 10px;">
             <p>Signify diversity! The #SANDWomen & #SANDMen are from different parts of the world, and yet by common
@@ -144,7 +145,7 @@
         <div class="image-section">
             <img src="img/raffia_img_one.jpg" alt="Introducing Raffia">
             <img src="img/raffia_img_two.jpg" alt="Special Edition">
-            <div class="text-overlay">
+            <div class="text-overlay"  data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <h1>INTRODUCING RAFFIA</h1>
                 <p>SPECIAL EDITION</p>
                 <a href="#">KNOW MORE</a>
@@ -154,7 +155,7 @@
     <!-- section end -->
 
     <!-- section start -->
-    <section class="island_palette_sec">
+    <section class="island_palette_sec"  data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <div>
             <p>DISCOVER THE ISLAND PALETTE</p>
         </div>
@@ -196,7 +197,7 @@
 
     <!-- section start -->
 
-    <div class="text-container">
+    <div class="text-container"  data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <h2>THE NEW #SANDBOX IS HERE!</h2>
         <p>
             Reflecting the natural colours of the Island in beautiful shades of sage, seafoam, sand, clay and ivory with
@@ -211,7 +212,7 @@
     <!-- section start -->
     <div class="needledust_sec">
         <div class="content">
-            <div class="needledust_text_section">
+            <div class="needledust_text_section"  data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <span
                     style="font-family: Bon Vivant;font-size: 38px;font-style: italic;font-weight: 400;line-height: 73.23px;">From</span>
                 <h2>THE HOUSE OF NEEDLEDUST</h2>
@@ -235,6 +236,10 @@
     <!-- section end -->
 
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
